[gd_scene load_steps=2 format=3 uid="uid://b2k330jc3b6va"]

[ext_resource type="Script" path="res://main.gd" id="1_10tw6"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_10tw6")

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 289.0
offset_top = -112.0
offset_right = 892.0
offset_bottom = 233.0
theme_override_font_sizes/font_size = 53
text = "Welcome! Tap Start."
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 135.0
offset_right = 644.0
offset_bottom = 218.0
theme_override_font_sizes/font_size = 29
text = "Click!"

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
